# Surfwise-Knowledgebase-Sample

./: README.md
docs/: KB-Integration comparison.md  connect-surfwise-admin-guide.md  knowledge-base-connector-integration-guide.md
kb-service/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
kb-service/app/: config.py  database.py  main.py  manual.py  markdown_utils.py  models.py  schemas.py  security.py  seed.py
kb-service/app/routers/: _serializers.py  books.py  documents.py  health.py  pages.py  tokens.py  ui.py
kb-service/migrations/: env.py
kb-service/migrations/versions/: 0001_init.py  0002_document_files.py  0003_token_admin.py
kb-service/tests/: conftest.py  test_authz.py  test_bookstack_contract.py  test_crud.py  test_documents.py  test_tokens.py
